@@ -1,3 +1,10 @@
+2008-09-24  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Dialog_Progress.cc: Added proper HTML start and finish.
+	  - gparted_details.htm now passes as HTML 4.0 Transitional
+	    in the validator found at http://validator.w3.org/
+	  - Closes GParted bug #525347
+
 2008-09-22  Curtis Gedak  <gedakc@gmail.com>
 
 	* configure.in,
